--- a/css/style copy.css
+++ b/css/style copy.css
@@ -7,15 +7,82 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
+    overflow-x: hidden;
+    background-color: rgb(9, 11, 15);
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="time"]::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 2px;
+    opacity: 0.9;
+    filter: invert(0.9);
+}
+
+#imagenFondo {
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+#imagenFondo img {
+    position: absolute;
+    z-index: -10;
+    height: 100vh;
+    max-width: 100vw;
+    filter: blur(0.5px);
+}
+
+#tareasSection section {
+    background-color: rgba(17, 24, 39, 1);
+    color: rgba(243, 244, 246, 1);
+    height: auto;
+    border-radius: 0.375rem;
+    padding: 0.75rem 1rem;
+    margin-bottom: 50px;
 }
 
 #formularioTareas {
-
-    background-color: rgb(137, 188, 215);
-    height: 100vh;
+    /*background-color: rgb(137, 188, 215);*/
+    background-color: rgb(9, 11, 15);
+    color: rgba(243, 244, 246, 1);
+    height: auto;
+    padding-bottom: 30px !important;
+    margin-bottom: 10px;
 }
 
+#formularioTareas section {
+    background-color: rgba(17, 24, 39, 1);
+    color: rgba(243, 244, 246, 1);
+    height: auto;
+    border-radius: 0.375rem;
+    padding: 0.75rem 1rem;
+}
 
+#formularioTareas section h1 {
+    margin-bottom: 20px;
+}
+
+#formularioTareas input,
+textarea {
+    width: 100%;
+    border-radius: 0.375rem;
+    border: 1px solid rgba(55, 65, 81, 1);
+    outline: 0;
+    background-color: rgba(17, 24, 39, 1);
+    padding: 0.75rem 1rem;
+    margin-bottom: 20px;
+    color: rgba(243, 244, 246, 1);
+}
+
+#formularioTareas input:focus,
+textarea:focus {
+    border-color: #0d6efd;
+}
+
+#formularioTareas h3 {
+    font-size: 1em;
+}
 
 textarea {
     resize: none;
@@ -43,7 +110,7 @@ div.tarea span {
     grid-area: borrar;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: top;
     margin-bottom: 10px;
 }
 
@@ -56,7 +123,7 @@ div.tarea span:hover {
     cursor: pointer;
 }
 
-#scrolleable{
+#scrolleable {
     height: 90vh;
     overflow-y: auto;
     overflow-x: hidden;
@@ -79,7 +146,11 @@ div.tarea span:hover {
 /* ---- .grid-item ---- */
 
 .tarea {
-    padding-left: 10px;
+    color: rgb(89, 4, 237);
+    color: rgb(4, 51, 237);
+    font-family: 'Orbitron', sans-serif;
+    padding-left: 15px;
+    padding-top: 10px;
     display: grid;
     grid-template-columns: 85% 15%;
     grid-template-rows: 25% 60% 15%;
@@ -91,9 +162,11 @@ div.tarea span:hover {
     width: 250px;
     height: 250px;
     background: rgb(248, 240, 134);
-    border: 1px solid #e6cd43;
-    background-color: #F8E57C;
+    border: 2px solid #c1e825;
     background-image: linear-gradient(to bottom right, #f8e072, #f5f593);
+    background: rgba(160, 182, 73, 0.572);
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
 }
 
 .grid-item--width2 {
@@ -106,51 +179,125 @@ div.tarea span:hover {
 
 .tarea:hover {
     border-color: hsla(0, 0%, 100%, 0.5);
-    box-shadow: 2px 2px 2px hsla(0, 0%, 16%, 0.724);
+    box-shadow: 0px 0px 10px hsla(0, 0%, 71%, 0.865);
     cursor: move;
 }
 
 .tarea.is-dragging,
 .tarea.is-positioning-post-drag {
-    background: #C90;
+    /* background: #C90;*/
     z-index: 2;
 }
 
+/*
 .packery-drop-placeholder {
     outline: 3px dashed hsla(0, 0%, 0%, 0.5);
     outline-offset: -6px;
     -webkit-transition: -webkit-transform 0.2s;
     transition: transform 0.2s;
 }
+*/
 
-@media only screen and (min-width: 1520px) {
-    #lista-tareas {
-        width: 1030px;
-    }
+/* prueba con degradado
+.packery-drop-placeholder {
+    background: rgb(138,138,138);
+    background: radial-gradient(circle, rgba(102, 102, 102, 0.192) 0%, rgba(0,212,255,0) 71%);
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+}
+*/
+
+.swal2-input-label {
+    color: white;
+    font-size: 1.5em;
 }
 
-@media only screen and (max-width: 1519px) {
-    #lista-tareas {
-        width: 775px;
-    }
+#swal2-input {
+    width: 300px;
 }
 
-@media only screen and (max-width: 1180px) {
+@media only screen and (min-width: 768px) {
+
     #lista-tareas {
         width: 530px;
     }
+
+    #swal2-input {
+        width: 400px;
+    }
 }
 
-@media only screen and (max-width: 991px) {
-    #formularioTareas {
-        height: auto;
-        padding-bottom: 30px !important;
-        margin-bottom: 50px;
+@media only screen and (min-width: 992px) {
+
+    html {
+        max-height: 100vh;
+        overflow: hidden;
     }
 
-    h2 {
+    body {
+        max-height: 100vh;
+    }
+
+    .row {
+        max-height: 100vh;
+        overflow: hidden;
+    }
+
+    #formularioTareas section {
+        height: 95vh;
+    }
+
+    #formularioTareas h1 {
+        margin-top: 20px;
+        font-size: 2em;
+    }
+
+    #tareasSection {
+        height: 100vh;
+        margin: 0;
+    }
+
+    #tareasSection h2 {
+        margin-top: 20px;
         margin-bottom: 30px
     }
 
+    #tareasSection section {
+        max-height: 95vh;
+
+        margin: 0;
+
+        border-radius: 0.375rem;
+        padding: 0.75rem 1rem;
+    }
+
+    #scrolleable {
+        max-height: 85%;
+    }
 }
 
+@media only screen and (min-width: 1200px) {
+    #lista-tareas {
+        width: 790px;
+    }
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #90909000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(243, 244, 246, 0.671);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(129, 129, 129);
+}
